# VRCPT

./: .gitignore  CMakeLists.txt  FS_checker_texture.fsh  FS_plan.fsh  FS_planet_texture.fsh  FS_simple.fsh  FS_simple_texture.fsh  README.md  VRResources.qrc  VS_simple.vsh  VS_simple_texture.vsh  VS_simpler.vsh  main.cpp  mainwindow.ui  vrbody.cpp  vrbody.h  vrbounce.cpp  vrbounce.h  vrcamera.cpp  vrcamera.h  vrcube.cpp  vrcurve.cpp  vrcurve.h  vrdice.cpp  vrdice.h  vrhelix.h  vrlight.cpp  vrmesh.cpp  vrmesh.h  vrmodel.cpp  vrmodel.h  vrplane.cpp  vrplane.h  vrplanet.cpp  vrplanet.h  vrscene.cpp  vrscene.h  vrskybox.cpp  vrskybox.h  vrsphere.cpp  (+11 more)
TP7VRYassou/TP7/: CMakeLists.txt  VRResources.qrc  VS_lit_texture.vsh  main.cpp  mainwindow.ui  vrairplane.cpp  vrairplane.h  vrbb8.cpp  vrbb8.h  vrbody.cpp  vrbody.h  vrcamera.h  vrlight.cpp  vrmesh.cpp  vrmesh.h  vrmodel.cpp  vrmodel.h  vrscene.cpp  vrsphere.cpp  vrsphere.h  vrsphericalcamera.cpp  vrsubjectivecamera.cpp  vrsubjectivecamera.h  vrsurface.cpp  vrsurface.h  vrwidget.cpp  vrwidget.h
TP7VRYassou/TP7/model/: IUT_INFO.X
VRProject/: CMakeLists.txt  VRResources.qrc  VS_heightmap.vsh  VS_lit_simple.vsh  VS_lit_texture_cube.vsh  VS_skybox_texture.vsh  main.cpp  mainwindow.ui  vrairplane.cpp  vrbody.cpp  vrbody.h  vrcamera.cpp  vrcamera.h  vrcube.cpp  vrcurve.cpp  vrcurve.h  vrdice.cpp  vrdice.h  vrhelix.h  vrlight.h  vrmesh.cpp  vrmesh.h  vrmodel.cpp  vrmodel.h  vrplane.cpp  vrplanet.cpp  vrscene.h  vrskybox.cpp  vrskybox.h  vrsphere.cpp  vrsphericalcamera.cpp  vrsphericalcamera.h  vrsurface.cpp  vrsurface.h  vrterrain.cpp  vrterrain.h  vrtexcube.cpp  vrtorus.cpp  vrtorus.h  vrwidget.cpp  (+1 more)
